# verified-rag

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_period_aware.py  from_retrieved_docs.py  quickstart.py
tests/: test_adapters.py  test_core.py
verified_rag/: __init__.py  adapters.py  citations.py  claims.py  faithfulness.py  llm.py  reconcile.py  types.py  verify.py
