[project]
name = "verified-rag"
version = "0.1.0"
description = "Make your RAG bot cite every number and stop it hallucinating: cross-source reconciliation, period-aware verification, faithfulness scoring and inline citations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "LicenseRef-Commercial" }
keywords = ["rag", "llm", "hallucination", "citations", "faithfulness", "verification", "ai"]
authors = [{ name = "ev609" }]
dependencies = []  # core is pure-stdlib

[project.optional-dependencies]
llm = ["anthropic>=0.40"]      # only needed for natural-language claim extraction
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/ev609/verified-rag"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["verified_rag"]
